# OCR-TOOL-REALTIME

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  possible-roadmap.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.retired/: add_tesseract_to_path.ps1  build_portable.bat  launch.bat  launch.sh
Scripts/: add_tesseract_to_path_SOTA2026.ps1  launch.bat  setup.bat  setup.sh
Source/: OCR-DRAG-N-Drop-Tool.py
tests/: __init__.py  conftest.py  test_image_processor.py  test_integration.py  test_main_window.py  test_utils.py
